--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "axios": "1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
