--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@popperjs/core": "^2.11.7",
     "axios": "1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
