--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "social-sharing": "^0.2.2",
     "vue": "^3.2.47",
-    "vue-router": "4.1.6"
+    "vue-router": "4.1.6",
+    "vue-social-sharing": "^4.0.0-alpha4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.2.0",
