--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.38.0",
     "eslint-plugin-vue": "9.11.0",
     "prettier": "^2.8.7",
+    "sass": "^1.62.1",
     "vite": "4.3.1"
   }
 }
