--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
+    "bootswatch": "^5.2.3",
     "lint": "^0.8.19",
     "popper.js": "^1.16.1",
     "social-sharing": "^0.2.2",
